Repository + ErrorModels + Controller + Enpoints + swagger Doc
